sales layout bug fixed send sms invoice added

--- a/src/app/sales-page/return-products/return-products.component.css
+++ b/src/app/sales-page/return-products/return-products.component.css
@@ -35,7 +35,6 @@
   max-height: 250px;
   position: fixed;
   bottom: 50px;
-  left: 0;
   z-index: 5;
 }
 
@@ -60,11 +59,15 @@
 }
 
 .toolbar {
-  position: fixed;
+  position: sticky;
   bottom: 0px;
-  width: 100vw;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 50px;
   z-index: 25;
 }
+
 
 .container {
   max-width: 700px;
