--- a/src/app/sales-page/sales-page.component.css
+++ b/src/app/sales-page/sales-page.component.css
@@ -3,7 +3,6 @@
   max-height: 250px;
   position: fixed;
   bottom: 50px;
-  left: 0;
   z-index: 5;
 }
 
@@ -29,9 +28,11 @@
 }
 
 .toolbar {
-  position: fixed;
+  position: sticky;
   bottom: 0px;
-  width: 100vw;
+  left: 0;
+  right: 0;
+  width: 100%;
   height: 50px;
   z-index: 25;
 }
